fixed typo in readme, added link to gist

--- a/README
+++ b/README
@@ -117,4 +117,6 @@ Feedback -
     Or do you wish to make changes to suit it to your needs?
     Fork it baby - http://github.com/ideamonk/PyMos
 
-    Loo into AUTHORS for mailing us.
+    Look into AUTHORS for mailing us.
+
+Btw do checkout this script to grab some images from flickr for testing it http://gist.github.com/231856
