Added reference to Joshua's excellent documentation :)

--- a/README
+++ b/README
@@ -106,6 +106,8 @@ Usage -
         foo.show()
 
 
+A more detailed, friendly description - http://huntertrek.com/wp/2009/11/30/photo-mosaics-with-pymos/
+
 Feedback -
 
     Did PyMos fail over something?
